Fix compile integration after simplex-develop rebase onto origin/master.
Restore ISTO-134 FHIR refactor dependencies and align core services with
the rebuilt branch so the project compiles cleanly.

Co-authored-by: Cursor <cursoragent@cursor.com>